--- a/imsogud.html
+++ b/imsogud.html
@@ -52,12 +52,12 @@
     
 $('#formTest').click(function(){
     console.log("test")
-    $.get( 'http://localhost:3333/getCreditLog', function( data ) {
+    $.get( 'http://37.139.5.194:3333/getCreditLog', function( data ) {
     var log = "";
     JSON.parse(data)
         $( "#getcreditarea" ).innerHTML = data;
     });
-    $.get( 'http://localhost:3333/getBankLog', function( data ) {
+    $.get( 'http://37.139.5.194:3333/getBankLog', function( data ) {
     $( "#getbankarea" ).val(data)
     });
 });
