--- a/imsogud.html
+++ b/imsogud.html
@@ -42,8 +42,9 @@
 <button id="formTest" >update</button>
 <div >
 <div style="width:33%;height:50%" name="getcreditarea" id="getcreditarea"></div>
-<textarea style="width:33%;height:50%" editable name="getrulearea" id="getrulearea" cols="30" rows="10"></textarea>
-<textarea style="width:33%;height:50%" editable name="getbankarea" id="getbankarea" cols="30" rows="10"></textarea>
+    <textarea style="width:33%;height:50%" name="getcreditarea" id="getcreditarea" cols="30" rows="10"></textarea>
+<textarea style="width:33%;height:50%" name="getrulearea" id="getrulearea" cols="30" rows="10"></textarea>
+<textarea style="width:33%;height:50%" name="getbankarea" id="getbankarea" cols="30" rows="10"></textarea>
 
 </div>
 </body>
