--- a/imsogud.html
+++ b/imsogud.html
@@ -56,7 +56,7 @@ $('#formTest').click(function(){
     $.get( 'http://37.139.5.194:3333/getCreditLog', function( data ) {
     var log = "";
     
-        $( "#getcreditarea" ).innerHTML = data;
+        $( "#getcreditarea" ).val(data);
     });
     $.get( 'http://37.139.5.194:3333/getBankLog', function( data ) {
     $( "#getbankarea" ).val(data)
